<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:background="@drawable/blur"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/materialCardView"
                android:layout_marginBottom="12dp"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="14dp"
                >

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout"
                    style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient"
                        android:elevation="0dp"
                        app:navigationIcon="@drawable/ic_baseline_menu_24"
                        app:title="Menu" />

                </com.google.android.material.appbar.AppBarLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/title"
                android:gravity="center|end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:autoSizeTextType="uniform"
                android:text="@string/app_name"/>
        </LinearLayout>

    <ScrollView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/Ahlebait"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title2"
                android:layout_marginBottom="20dp"
                android:text="@string/islam_science"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title3"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:text="@string/arbic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title4"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:text="@string/and"
                android:textSize="18sp" />
            <TextView
                android:textColor="@color/white"
                android:id="@+id/title6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/al_qur_an_34_06"
                android:layout_below="@id/title5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/getStarted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title6"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/black"
                android:text="Get started"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/PE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/getStarted"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/PE"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/OW"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/PE"
                android:text="@string/OW"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <androidx.cardview.widget.CardView
                android:id="@+id/PGCard"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                android:layout_below="@+id/OW">
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                     />

            </androidx.cardview.widget.CardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Explore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/PGCard"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/black"
                android:text="Explopre More"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/OM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Explore"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/OurMission"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/J"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/OM"
                android:layout_marginBottom="20dp"
                android:text="@string/J"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                android:layout_below="@+id/J"
                android:id="@+id/JCard">
                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/JW"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/JCard"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/JW"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/WA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/JW"
                android:layout_marginBottom="20dp"
                android:text="@string/WC"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                android:layout_below="@+id/WA"
                android:id="@+id/AlCard">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/bhai"
                        android:id="@+id/AlImg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:text="Altamash Haider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="center"
                        android:text="ADMIN, DEVELOPER, ACIMSAT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/KO"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/AlCard"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/LD"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/L"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/KO"
                android:text="@string/L"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                android:layout_below="@+id/L"
                android:id="@+id/AT">
                <LinearLayout
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_weight="1"
                        android:id="@+id/leaderImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/leader"/>
                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/leaderPos"/>
                </LinearLayout>


            </androidx.cardview.widget.CardView>



        </RelativeLayout>
    </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/gradient"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>