<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainQuiz">


    <androidx.cardview.widget.CardView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/qustion_1_12"
        android:textSize="50sp"
        app:cardCornerRadius="14dp"
        app:cardElevation="14dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoSizeTextType="none"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="351dp"
        android:layout_height="536dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/qustion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/qustion"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/back2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/option1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/back2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/option1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/back2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/option1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/back2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/option1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:background="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/next"
                android:textSize="20sp"
                app:cornerRadius="12dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>